<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:isScrollContainer="true"
    android:scrollbars="vertical"
    tools:context=".UI.Admin.ui.home.TambahBarangFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="40dp">

        <!-- Header -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/gambar_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/nama_sekolah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/lokasi"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/biru" />
        </LinearLayout>

        <!-- Garis bawah header -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corner" />

        <!-- Tombol back -->
        <ImageView
            android:id="@+id/btnback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/baseline_arrow_back" />

        <TextView
            android:id="@+id/rvKategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_chip"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:text="Pilih Kategori"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/rvKodeBarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/solid_rec"
            android:padding="16dp"
            android:textColor="@color/biru"
            android:textStyle="bold"
            android:hint="Kode Barang"/>

        <!-- Input Data Barang -->
        <EditText
            android:id="@+id/rvNamaBarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/solid_rec"
            android:padding="16dp"
            android:textColor="@color/biru"
            android:textStyle="bold"
            android:hint="Nama Barang"
            android:inputType="text" />

        <TextView
            android:id="@+id/chipSemua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pilih Merek"
            android:background="@drawable/solid_rec"
            android:textColor="@android:color/black"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:paddingTop="17dp"
            android:paddingBottom="17dp"
            android:layout_marginEnd="20dp" />

        <EditText
            android:id="@+id/rvHargaBeli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/solid_rec"
            android:padding="16dp"
            android:textColor="@color/biru"
            android:textStyle="bold"
            android:hint="Harga Beli"
            android:inputType="number" />

        <EditText
            android:id="@+id/rvHargaJual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/solid_rec"
            android:padding="16dp"
            android:textColor="@color/biru"
            android:textStyle="bold"
            android:hint="Harga Jual"
            android:inputType="number" />

        <!-- Foto Produk -->
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_line"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/rvProduk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="Foto Produk"
                android:textSize="15sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/dashed_border">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_image" />

                <ImageButton
                    android:id="@+id/btnDeleteImage"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="top|end"
                    android:layout_margin="8dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_close"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginBottom="40dp"
                    android:text="@string/tambah_gambar"
                    android:textAlignment="center"
                    android:textColor="@color/biru"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/format_jpg_size_1_mb"
                    android:textAlignment="center"
                    android:textColor="@color/biru"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </FrameLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/rvStokToko"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/solid_rec"
            android:padding="16dp"
            android:textColor="@color/biru"
            android:textStyle="bold"
            android:hint="Stok Awal Toko"
            android:inputType="number" />

        <EditText
            android:id="@+id/rvStokGudang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/solid_rec"
            android:padding="16dp"
            android:textColor="@color/biru"
            android:textStyle="bold"
            android:hint="Stok Awal Gudang"
            android:inputType="number" />


        <EditText
            android:id="@+id/rvStokMinimum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/solid_rec"
            android:padding="16dp"
            android:textColor="@color/biru"
            android:textStyle="bold"
            android:hint="Stok minimum"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="Digunakan untuk pengingat stok kurang"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <!-- Deskripsi -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="Deskripsi"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_line"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/biru"
                android:textStyle="normal"
                android:hint="Masukkan deskripsi barang"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <!-- Tombol Simpan -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:paddingBottom="40dp">


            <Button
                android:id="@+id/btnSimpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Simpan"
                android:backgroundTint="@color/biru"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

            <ProgressBar
                android:id="@+id/loadingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
